# PNG-PDF

./: Dockerfile  KUBERNS.md  Procfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-and-deploy.yml
app/: __init__.py  config.py  main.py
app/converters/: __init__.py  base.py  documents.py  images.py  pdf.py  registry.py
app/static/: styles.css
app/templates/: index.html
k8s/: README.md  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
scripts/: deploy.sh
tests/: test_app.py
